--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,6 @@
 {
   "О сайте": "About",
-  "Главная страница":  "Main Page",
-  "Язык" : "English"
+  "Главная страница": "Main Page",
+  "Язык": "English",
+  "Страница не найдена": "Page not found"
 }
