--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,5 +1,6 @@
 {
-  "Главная страница":  "Главная страница",
-  "Язык" : "Руский",
-  "О сайте": "О сайте"
+  "Главная страница": "Главная страница",
+  "Язык": "Руский",
+  "О сайте": "О сайте",
+  "Страница не найдена": "Страница не найдена"
 }
