set react testing library, writing test on Button component

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,5 +2,7 @@
   "О сайте": "About",
   "Главная страница": "Main Page",
   "Язык": "English",
-  "Страница не найдена": "Page not found"
+  "Страница не найдена": "Page not found",
+  "('Произошла непредвиденная ошиб')": "('Произошла непредвиденная ошиб')",
+  "('Обновить страницу')": "('Обновить страницу')"
 }
