--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,5 +2,7 @@
   "Главная страница": "Главная страница",
   "Язык": "Руский",
   "О сайте": "О сайте",
-  "Страница не найдена": "Страница не найдена"
+  "Страница не найдена": "Страница не найдена",
+  "('Произошла непредвиденная ошиб')": "('Произошла непредвиденная ошиб')",
+  "('Обновить страницу')": "('Обновить страницу')"
 }
