add storybook, added loki

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -3,6 +3,6 @@
   "Язык": "Руский",
   "О сайте": "О сайте",
   "Страница не найдена": "Страница не найдена",
-  "('Произошла непредвиденная ошиб')": "('Произошла непредвиденная ошиб')",
-  "('Обновить страницу')": "('Обновить страницу')"
+  "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
+  "Обновить страницу": "Обновить страницу"
 }
