--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,6 +3,6 @@
   "Главная страница": "Main Page",
   "Язык": "English",
   "Страница не найдена": "Page not found",
-  "('Произошла непредвиденная ошиб')": "('Произошла непредвиденная ошиб')",
-  "('Обновить страницу')": "('Обновить страницу')"
+  "Произошла непредвиденная ошибка": "Something went wrong...",
+  "Обновить страницу": "Refresh page"
 }
