--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,5 +4,6 @@
   "Язык": "English",
   "Страница не найдена": "Page not found",
   "Произошла непредвиденная ошибка": "Something went wrong...",
-  "Обновить страницу": "Refresh page"
+  "Обновить страницу": "Refresh page",
+  "Короткий язык": "En"
 }
